<resources>
    <string name="app_name">PipTalk</string>
    <string name="action_settings">Settings</string>


    <string name="profilePicture">Profile picture</string>

    <string name="searchButton">Search Button</string>


    <string name="profile">Profile</string>

    <string name="typeMessage">Type a message</string>

    <string name="send">Send</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--hint for username text -->
    <string name="user_name">Username</string>
    <!--hint for password -->
    <string name="password">Password</string>
    <!--Login Btn -->
    <string name="login">LOG IN</string>
    <!--Email -->
    <string name="email">Email</string>
    <!--Login Btn -->
    <string name="signup">Sign Up</string>


    <string name="contact_us">Contact us</string>

    <string name="help">Help</string>

    <string name="logo">app logo</string>
    <string name="forgotPass">forgot password?</string>


    <string name="findPpl">Find People&#8230;</string>


    <string name="pref_language_label">Native Language</string>
    <string name="pref_language_key">language</string>
    <string name="pref_language_default_value">en</string>
    <string name="edit_profile">Edit Profile</string>


    <string name="username">Username</string>
    <string name="user_image">User Image</string>

    <string name="face">smiley face</string>

    <string name="editData">Edit</string>


    <string name="chat_profile_pic">ProfilePicture</string>
    <string name="chat_username">Username</string>

    <string name="view_profile_pic">viewProfilePic</string>
    <string name="view_profile_usr">viewProfileUsername</string>
    <string name="startChat">Start chat</string>

    <string name="oldPass">Old password</string>
    <string name="newPass">New password</string>
    <string name="repeatPass">Re-type password</string>
    <string name="confirm">Confirm</string>


    <string name="passwordNote">Note: Password should be more than 8 characters, contain at least one uppercase, lowercase letters and digit</string>


    <string name="changePass">Change Password</string>

    <string name="editProfile">Edit profile</string>
    <string name="save">Save</string>

    <string name="other">Other</string>


    <string name="currentStatus">Current status</string>
    <string name="nativeLang">Native language</string>



    <string name="status_and_lang">Status and language</string>
    <string name="profile_picture">profile picture</string>
    <string name="maxDate">2017</string>
    <string name="dateOB">Birthday</string>
    <string name="phoneNum">Phone number</string>

<string name="langSpinnerPrompt">Select your Language</string>
    <string name="piptalk">Piptalk</string>
    <string name="select_your_birth_date">Select your birth date</string>
    <string name="edit_phone">Phone Number</string>

<string name="edit_status">My Status</string>
    <string name="edit_birth">My Birthday</string>
</resources>
