<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center_horizontal|center_vertical"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginEnd="16dp">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/contactProfileImage"
            android:contentDescription="@string/profilePicture"
            tools:src="@android:drawable/btn_dialog"
            android:padding="24dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:minWidth="100dp"
            android:minHeight="100dp"
            android:transitionName="@string/chat_profile_pic"
            tools:targetApi="lollipop" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contactName"
                android:text="Nour basha"
                android:textStyle="bold"
                android:textSize="25sp"
                android:transitionName="@string/chat_username"
                tools:ignore="HardcodedText"
                tools:targetApi="lollipop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lastMessage"
                android:text="how ru doing ? i miss you!"
                tools:ignore="HardcodedText" />
        </LinearLayout>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastMessageTime"
        tools:text="12:30 Pm"
        android:layout_margin="2dp"
        android:layout_gravity="end|center_vertical"

        android:layout_weight="1"
        />


    </LinearLayout>
    <View
        android:id="@+id/SplitLine_hor2"
        android:layout_width="match_parent"
        android:layout_height= "0.5dp"
        android:background="@color/lighBink"/>
</LinearLayout>