<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:background="?colorPrimary"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleMarginStart="32dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="192dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax"
                    android:scaleType="fitXY"
                    android:src="@drawable/unknown_male"
                    tools:ignore="ContentDescription"
                    android:id="@+id/ppimageView"
                    />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/scrim_gradient"/>
            </FrameLayout>


            <android.support.v7.widget.Toolbar
                android:id="@+id/profile_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:navigationIcon="@drawable/arrow_left"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStart="72dp"
                app:layout_collapseMode="pin"
                />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_marginTop="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true"


                >
                <LinearLayout
                    android:id="@+id/linear_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:background="@drawable/card_view_click">
                    <TextView
                        android:layout_marginTop="16dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:text="@string/status_and_lang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textColor="@color/colorAccent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp" />
                    <TextView
                        android:id="@+id/user_status"
                        android:layout_marginTop="24dp"
                        android:text="this is my status, what do u think ?"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/darkBlack"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        tools:ignore="HardcodedText" />
                    <TextView
                        android:id="@+id/status_note"
                        android:layout_marginTop="4dp"
                        android:text="@string/currentStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/language"
                        android:layout_marginTop="24dp"
                        android:text="English"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/darkBlack"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/language_note"
                        android:layout_marginTop="4dp"
                        android:text="@string/nativeLang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        tools:ignore="HardcodedText"
                        android:layout_marginBottom="8dp"/>
                    <!-- Gender Phone Number And Birth Date -->

                    <TextView
                        android:id="@+id/other_o"
                        android:layout_marginTop="16dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:text="@string/other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textColor="@color/colorAccent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/profile_birth_date"
                        android:layout_marginTop="24dp"
                        tools:text="English"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/darkBlack"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        tools:ignore="HardcodedText" />
                    <TextView
                        android:id="@+id/date_note"
                        android:layout_marginTop="4dp"
                        android:text="@string/dateOB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        tools:ignore="HardcodedText"
                        android:layout_marginBottom="8dp"/>


                    <TextView
                        android:id="@+id/profile_phone_number"
                        android:layout_marginTop="24dp"
                        tools:text="English"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/darkBlack"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        tools:ignore="HardcodedText" />
                    <TextView
                        android:id="@+id/phoneNum_note"
                        android:layout_marginTop="4dp"
                        android:text="@string/phoneNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        tools:ignore="HardcodedText"
                        android:layout_marginBottom="8dp"/>

                </LinearLayout>


            </android.support.v7.widget.CardView>


        </LinearLayout>



    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="mini"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        android:id="@+id/fab_change_image"
        android:src="@drawable/ic_edit_white_24dp"
        app:backgroundTint="@color/colorAccent"
        />


</android.support.design.widget.CoordinatorLayout>

