

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/changePassScrollView"
    android:background="@android:color/transparent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal|center_vertical"
            >
            <ImageView
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:src="@drawable/app_logo"
                />
        </FrameLayout>
        <com.pip.talk.pip.pc.piptalk.MyEditText
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/changePassOldTxt"
            android:textSize="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/oldPass"
            android:textColorHint="@color/lightGray"
            android:textColor="@android:color/white"
            android:maxLength="15"
            android:background="@android:color/transparent"
            android:padding="16dp"
            android:gravity="left"
            android:drawableLeft="@drawable/pass"
            android:drawablePadding="20dp"

            />
        <View
            android:id="@+id/SplitLine_hor"
            android:layout_width="match_parent"
            android:layout_height= "1dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="80dp"
            android:background="@color/lighBink"/>


        <com.pip.talk.pip.pc.piptalk.MyEditText
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/changePassNewTxt"
            android:textSize="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPass"
            android:textColorHint="@color/lightGray"
            android:textColor="@android:color/white"
            android:maxLength="15"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:padding="16dp"
            android:gravity="left"
            android:drawableLeft="@drawable/pass"
            android:drawablePadding="20dp"

            />
        <View
            android:id="@+id/SplitLine_hor2"
            android:layout_width="match_parent"
            android:layout_height= "1dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="80dp"
            android:background="@color/lighBink"/>
        <com.pip.talk.pip.pc.piptalk.MyEditText
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/changePassNew2Txt"
            android:textSize="15dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeatPass"
            android:textColorHint="@color/lightGray"
            android:textColor="@android:color/white"
            android:maxLength="15"
            android:background="@android:color/transparent"
            android:padding="16dp"
            android:gravity="left"
            android:drawableLeft="@drawable/pass"
            android:drawablePadding="20dp"

            />
        <View
            android:id="@+id/SplitLine_hor3"
            android:layout_width="match_parent"
            android:layout_height= "1dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="80dp"
            android:background="@color/lighBink"/>

        <TextView
            android:id="@+id/passwordNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="4dp"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            />

        <ImageButton
            android:elevation="3dp"
            android:layout_marginTop="15dp"
            android:id="@+id/changePassConfirmBtn"
            android:layout_width="230dp"
            android:src="@drawable/login_icon"
            android:layout_height="50dp"
            android:background="@drawable/rect1"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal|center_vertical"

            />

    </LinearLayout>
</ScrollView>